k8s/dep-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deploy
  labels:
    app: db

spec:
  replicas: 1

  selector:
    matchLabels:
      app: db

  template:
    metadata:
      labels:
        app: db

    spec:
      containers:
        - name: db
          image: postgres:15-alpine

          ports:
            - containerPort: 5432
              name: db-port

          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: pvc-db
