k8s/dep-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-db
  labels:
    app: redis

spec:
  replicas: 1
  
  selector:
    matchLabels:
      app: redis

  template:
    metadata:
      labels:
        app: redis

    spec:
      containers:
      - name: redis
        image: redis:alpine

        ports:
        - containerPort: 6379
          name: redis-port
