k8s/dep-result.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-db
  labels:
    app: result

spec:
  replicas: 1
  selector:
    matchLabels:
      app: result

  template:
    metadata:
      labels:
        app: result

    spec:
      containers:
      - name: result
        image: 569033310103.dkr.ecr.us-east-1.amazonaws.com/voting-app-result:latest

        ports:
        - containerPort: 4000
          name: result-port
