k8s/dep-vote.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-db
  labels:
    app: vote

spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote

  template:
    metadata:
      labels:
        app: vote

    spec:
      containers:
      - name: vote
        image: 569033310103.dkr.ecr.us-east-1.amazonaws.com/voting-app-vote:latest

        ports:
        - containerPort: 80
          name: vote-port
