k8s/dep-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-db
  labels:
    app: worker

spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker

  template:
    metadata:
      labels:
        app: worker

    spec:
      containers:
      - name: worker
        image: 569033310103.dkr.ecr.us-east-1.amazonaws.com/voting-app-worker:latest

        ports:
        - containerPort: 4000
          name: worker-port
