k8s/svc-db.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-db
  labels:
    app: db
spec:
  selector: 
    app: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: db-port
  type: ClusterIP
