k8s/svc-vote.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-vote
  labels:
    app: vote
spec:
  selector:
    app: vote
  ports:
    - protocol: TCP
      port: 80
      targetPort: vote-port
  type: ClusterIP
