k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: voting-app-ingress

spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-vote
            port:
              number: 80

      - path: /result
        pathType: Prefix
        backend:
          service:
            name: svc-result
            port:
              number: 4000
